edited html file

--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
   </head>
   <body>
     <h1>Hello World!</h1>
-    <p>This is how you
+    <p>
+      This is how you
       <b>bold words</b>
       and this is how you
       <i>italicize them!</i>
+    </p>
+    <p>
+      I hope building this website doesn't take me too much time!
+      That would make me sad..
     </p>
   </body>
 </html>
