--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="website.css">
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>My First Page</title>
   </head>
   <body>
