--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
+<!DOCTYPE html>
 <html>
   <head>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>My First Page</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>Home</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Hi, I'm Max</h1>
+    <h2>Aspiring Software Engineer</h2>
+    <h1><i class="material-icons" style="color:red">place</i> Chino, CA</h1>
     <p>
-      This is how you
-      <b>bold words</b>
-      and this is how you
-      <i>italicize them!</i>
+      My name is Max Jeon, and I am a premedical student turned software engineer.
+
     </p>
     <p>
       I hope building this website doesn't take me too much time!
