added more to site

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Home</title>
   </head>
-  <body>
-    <h1>Hi, I'm Max</h1>
-    <h2>Aspiring Software Engineer</h2>
-    <h1><i class="material-icons" style="color:red">place</i> Chino, CA</h1>
-    <p>
-      My name is Max Jeon, and I am a premedical student turned software engineer.
-
-    </p>
-    <p>
-      I hope building this website doesn't take me too much time!
-      That would make me sad..
-    </p>
-  </body>
+  <header>
+    <body>
+      <ul>
+        <li><button>Home</button></li>
+        <li><button>About</button></li>
+        <li><button>Contact Information</button></li>
+      </ul>
+      <h1>Hi, I'm Max</h1>
+      <img src="PassportPhoto.JPEG" alt="Photo" width="400" height="400">
+      <h2>Aspiring Software Engineer</h2>
+      <h1><i class="material-icons" style="color:red">place</i> Chino, CA</h1>
+      <p>
+        My name is Max Jeon, and I am a premedical student turned software engineer.
+      </p>
+    </body>
+  </header>
 </html>
