made changes to the site

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/33d954d7c1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Home</title>
+    <title>My Website</title>
   </head>
   <header>
     <body>
@@ -12,12 +16,12 @@
         <li><button>About</button></li>
         <li><button>Contact Information</button></li>
       </ul>
-      <h1>Hi, I'm Max</h1>
-      <img src="PassportPhoto.JPEG" alt="Photo" width="400" height="400">
+      <h1>Max Jeon</h1>
+      <img src="PassportPhoto.JPEG" alt="Photo" class="photo">
       <h2>Aspiring Software Engineer</h2>
       <h1><i class="material-icons" style="color:red">place</i> Chino, CA</h1>
       <p>
-        My name is Max Jeon, and I am a premedical student turned software engineer.
+        My name is Max Jeon, and I am a pre-medical student turned pre-software engineer.
       </p>
     </body>
   </header>
