--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="Resume_Max_Jeon.pdf">Resume</a></li>
+        <li><a href="Resume_Max_Jeon.pdf" target="_blank" rel="noopener">Resume</a></li>
       </ul>
     </nav>
     <div class="homepage" id="home" >
       <div class="intro">
-        <h1 style="margin-bottom: 70px;">Max Jeon</h1>
+        <h1 style="margin-bottom: 70px;">Maximilian Jeon</h1>
         <img src="PassportPhoto.JPEG" alt="Photo" class="photo">
         <h2 style="margin-top: 70px;">Aspiring Software Engineer</h2>
-        <h1 style="margin-top: 70px;"><i class="material-icons" style="color:red">place</i> Chino, CA</h1>
+        <h1 style="margin-top: 70px;"><i class="material-icons" style="color:red;font-size: 54px">place</i> Chino, CA</h1>
       </div>
     </div>
     <div class="about-me" id="about">
@@ -38,11 +38,18 @@
           receive acceptance into the programs I was interested in. Throughout this process, I developed a growing interest in coding and
           because all of my closest friends are software engineers, I began to ask more and more questions about working in the field.
           I decided that a career as a software engineer was much better suited to my life goals, and I also found it to be much more
-          interesting than I expected. I am now enrolled into a bootcamp at Rithm School and am excited to enter the software workforce.
+          interesting than I expected. I am now enrolled in a bootcamp called Rithm School and am excited to enter the software workforce.
       </div>
     </div>
     <div class="project-list" id="projects">
-      <h1 style="margin: 20px 0px;">Projects</h1>
+      <h1 style="margin-top: 20px; margin-bottom: 0;">Projects</h1>
+      <h3>Coming Soon...</h3>
+      <div class="grid-container">
+        <a href="https://github.com/" target="_blank" rel="noopener"><div id="item1"></div></a>
+        <div id="item2">Project 2</div>
+        <div id="item3">Project 3</div>
+        <div id="item4">Project 4</div>
+      </div>
     </div>
     <div class="contact-info" id="contact">
       <h1 style="margin-top: 0; margin-bottom: 2px;">Contact Information</h1>
