finalized for now

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1 style="margin-top: 20px; margin-bottom: 0;">Projects</h1>
       <h3>Coming Soon...</h3>
       <div class="grid-container">
-        <a href="https://github.com/" target="_blank" rel="noopener"><div id="item1"></div></a>
+        <a href="https://imgur.com/sRl2nqC" target="_blank" rel="noopener"><div id="item1"></div></a>
         <div id="item2">Project 2</div>
         <div id="item3">Project 3</div>
         <div id="item4">Project 4</div>
