--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="contact-info" id="contact">
-      <h1 style="margin-top: 0; margin-bottom: 2px;">Contact Information</h1>
+      <h1 style="margin-top: 0; margin-bottom: 0;">Contact Information</h1>
       <h3>Ask Me Anything!</h3>
       <ul class="socials">
         <li><a href="https://github.com/maxjeon97" target="_blank" rel="noopener"><i class="fa-brands fa-github"></i>https://github.com/maxjeon97</a></li>
