some more changes to site

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1 style="margin-bottom: 70px;">Maximilian Jeon</h1>
         <img src="PassportPhoto.JPEG" alt="Photo" class="photo">
         <h2 style="margin-top: 70px;">Aspiring Software Engineer</h2>
-        <h1 style="margin-top: 70px;"><i class="material-icons" style="color:red;font-size: 54px">place</i> Chino, CA</h1>
+        <h1 style="margin-top: 70px;position: relative; top:80px"><i class="material-icons" style="color:red;font-size: 54px">place</i> Chino, CA</h1>
       </div>
     </div>
     <div class="about-me" id="about">
@@ -39,6 +39,15 @@
           because all of my closest friends are software engineers, I began to ask more and more questions about working in the field.
           I decided that a career as a software engineer was much better suited to my life goals, and I also found it to be much more
           interesting than I expected. I am now enrolled in a bootcamp called Rithm School and am excited to enter the software workforce.
+      </div>
+      <div class="hobbies">
+        <h3 style="margin-bottom: 10px;">Hobbies</h3>
+        <ul>
+          <li><i class="fa-solid fa-film"></i> Watching movies</li>
+          <li><i class="fa-solid fa-utensils"></i> Eating good food</li>
+          <li><i class="fa-solid fa-dumbbell"></i> Working out</li>
+          <li><i class="fa-solid fa-people-group"></i> Spending time with loved ones</li>
+        </ul>
       </div>
     </div>
     <div class="project-list" id="projects">
