some more changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1 style="margin-bottom: 70px;">Maximilian Jeon</h1>
         <img src="PassportPhoto.JPEG" alt="Photo" class="photo">
         <h2 style="margin-top: 70px;">Aspiring Software Engineer</h2>
-        <h1 style="margin-top: 70px;position: relative; top:80px"><i class="material-icons" style="color:red;font-size: 54px">place</i> Chino, CA</h1>
+        <h2 style="margin-top: 70px; position: relative; top:80px;"><i class="material-icons" style="color:red;font-size: 54px;position: relative; top:5px;">place</i> Chino, CA</h2>
       </div>
     </div>
     <div class="about-me" id="about">
