--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </nav>
     <div class="homepage" id="home" >
       <div class="intro">
-        <h1 style="margin-bottom: 70px;">Maximilian Jeon</h1>
+        <h1 style="margin-bottom: 70px; font-weight: 600;">Maximilian Jeon</h1>
         <img src="PassportPhoto.JPEG" alt="Photo" class="photo">
-        <h2 style="margin-top: 70px;">Aspiring Software Engineer</h2>
-        <h2 style="margin-top: 70px; position: relative; top:80px;"><i class="material-icons" style="color:red;font-size: 54px;position: relative; top:5px;">place</i> Chino, CA</h2>
+        <h2 style="margin-top: 70px; font-weight: 500;">Aspiring Software Engineer</h2>
+        <h2 style="margin-top: 70px; position: relative; top:60px;"><i class="material-icons" style="color:red;font-size: 54px;position: relative; top:5px;">place</i> <em>Chino, CA</em></h2>
       </div>
     </div>
     <div class="about-me" id="about">
